drkns 29.05.2020 18:57:47 +0100 - build 5612

1. В некоторых случаях не удалялись описания файлов.

2. Рефакторинг.

3. Warnings.

svs 27.05.2020 21:30:18 +0300 - build 5611

1. SQLite 3.32.1

drkns 26.05.2020 08:45:08 +0100 - build 5610

1. Уточнение 5608.

svs 26.05.2020 10:38:50 +0300 - build 5609

1. SQLite 3.32.0

drkns 25.05.2020 16:27:26 +0100 - build 5608

1. Некорректно создавались символические ссылки.

2. В диалоге атрибутов некорректно отображались сетевые диски.

3. Рефакторинг. Выкинуто много копипасты.

drkns 24.05.2020 20:53:25 +0100 - build 5607

1. Новые версии fmt, tinyxml2, Catch2.

2. Warnings.

drkns 24.05.2020 02:04:04 +0100 - build 5606

1. Уточнение 5599 еще раз.

2. Игнорирование пробелов перед / после far:config и far:about.

3. Пара мелких оптимизаций.

4. Юнит-тесты не очищают буфер обмена.

5. Убран дисклеймер из changelog_eng. Обновляйте его вместе со всем остальным, это не так сложно.

zg 21.05.2020 14:52:59 +0300 - build 5605

1. первый DN_GOTFOCUS приходил не всегда с актуальной информацией.

drkns 19.05.2020 20:35:17 +0100 - build 5604

1. gh-242: Far2 CtrlAltShift behavior

zg 18.05.2020 23:28:13 +0300 - build 5603

1. откат 5601.

drkns 18.05.2020 18:13:57 +0100 - build 5602

1. Уточнение 5599.

zg 18.05.2020 17:08:41 +0300 - build 5601

1. экспериментально: новое событие SE_FOLDERCHANGED, приходит асинхронно при смене текущей папки в панелях.

drkns 17.05.2020 17:56:00 +0100 - build 5600

1. Рефакторинг.

2. Тесты.

drkns 16.05.2020 02:22:20 +0100 - build 5599

1. Рефакторинг.

2. Warnings.

drkns 15.05.2020 18:05:22 +0100 - build 5598

1. Запрос имени & пароля при переходам по сетевым путям.

drkns 13.05.2020 23:46:30 +0100 - build 5597

1. Рефакторинг.

2. Уточнения 5592.

3. Warnings.

drkns 04.05.2020 20:12:47 +0300 - build 5596

1. Уточнение 5592.

zg 04.05.2020 14:50:25 +0300 - build 5595

1. с форума: Комбобокс позволяет установить курсор за пределы текста.

MZK 02.05.2020 23:48:24 -0700
