@@ -1,3 +1,7 @@
+shmuel 30.05.2020 19:39:20 +0300 - build 5613
+
+1. Экспериментально: не будем прятать окошки прогресса (например, копирования) при исполнении макроса.
+
 drkns 29.05.2020 18:57:47 +0100 - build 5612
 
 1. В некоторых случаях не удалялись описания файлов.
